--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Hey git</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1 style="color: chartreuse;">Welcome to my website</h1>
     <h2>Hello!</h2>
     Hello world
 </body>
